db/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: secure-app
spec:
  selector:
    app: db
  ports:
  - port: 5432
    targetPort: 80
